k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: backend-chatapp-deployment
 namespace: chat-app
spec:
  replicas: 1
  selector:
   matchLabels:
      app: backend

  template:
   metadata:
    name: backend-pods
    labels:
      app: backend
   spec:
    containers:
      - name: backend-chat-app
        image: sarthak2211/chatapp-backend:latest
        ports:
        - containerPort: 5001
