k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: frontend-chatapp-deployment
 namespace: chat-app
spec:
  replicas: 1
  selector:
   matchLabels:
      app: frontend

  template:
   metadata:
    name: frontend-pods
    labels:
      app: frontend
   spec:
    containers:
      - name: frontend-chat-app
        image: sarthak2211/chatapp-frontend:latest
        ports:
        - containerPort: 80
