k8s/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: mongodb-chatapp-deployment
 namespace: chat-app
spec:
  replicas: 1
  selector:
   matchLabels:
      app: mongodb

  template:
   metadata:
    name: mongodb-pods
    labels:
      app: mongodb
   spec:
    containers:
      - name: mongodb-chat-app
        image: mongo:latest
        ports:
        - containerPort: 27017
    volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
